# code-connect

./: .editorconfig  .flake8  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  activate.fish  activate.sh  code-connect.plugin.zsh  code_connect.py  init.fish  init.sh  install.sh  pyproject.toml
.github/actions/run-in-container/: Dockerfile  action.yml
.github/workflows/: apply-code-style.yml  code-style.yml  lint-pull-requests.yml
.github/workflows/actions/: poetry-run.yml
bash/: code-connect.sh  code.sh  install.sh  uninstall.sh
conf.d/: code-connect.fish
functions/: code-connect.fish  code.fish  code_connect.py
shell/: code-connect.sh  install.sh  uninstall.sh
zsh_functions/: code  code-connect
