[tool.poetry]
authors = ["Christian Volkmann <christian.volkmann@rwth-aachen.de>"]
description = "Open a file in your locally running Visual Studio Code instance from arbitrary terminal connections."
keywords = ["vscode"]
license = "MIT"
name = "code-connect"
repository = "https://github.com/chvolkmann/code-connect"
version = "0.3.2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
