[tool.poetry]
authors = ["Christian Volkmann <christian.volkmann@rwth-aachen.de>"]
description = "Open a file in your locally running Visual Studio Code instance from arbitrary terminal connections."
keywords = ["vscode"]
license = "MIT"
name = "code-connect"
repository = "https://github.com/chvolkmann/code-connect"
version = "0.3.2"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"

[tool.ruff]
line-length = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
